--- a/NerdyTimer/NerdyTimer/NerdyTimer.csproj
+++ b/NerdyTimer/NerdyTimer/NerdyTimer.csproj
@@ -138,6 +138,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\NerdyTimer_Icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
